--- a/app/src/main/res/xml/preferences_gotway.xml
+++ b/app/src/main/res/xml/preferences_gotway.xml
@@ -52,11 +52,11 @@
 	<CheckBoxPreference
         android:key="@string/use_ratio"
         android:title="My Wheel is a Gotway MCM "
-        android:summary="If your wheel is Gotway MCM, and it shows wrong speed, distance and others parameters, it should make them normal" />
+        android:summary="If your wheel is a Gotway MCM, and it shows wrong speed, distance and others parameters, it should make them normal" />
 
 	<CheckBoxPreference
         android:key="@string/gotway_84v"
         android:title="My Wheel is a Gotway with 84V battery"
-        android:summary="If your wheel is Gotway with 20S (84V) battery" />
+        android:summary="If your wheel is a Gotway with 20S (84V) battery" />
 		
 </PreferenceScreen>
